# VendingMachine

./: CMakeLists.txt  readme.md
include/: discount_vm.h  machine.h  product.h  user.h  vending_machine.h
src/: discount_vm.cpp  main.cpp  product.cpp  user.cpp  vending_machine.cpp
